Fixed spacing issue on home page, playing with photo for hero

--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -19,10 +19,13 @@
 }
 
 .hero {
-  height: 100vh;
-  width: auto;
   position: relative;
   z-index: -1;
+  background-image: url("../../assets/HeroPhoto2.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
 }
 
 .heroWords {
@@ -129,7 +132,7 @@
 }
 
 .whyDoula h2 {
-  margin: 15px auto;
+  margin: 75px auto 15px;
   font-size: 2.25rem;
   text-align: center;
 }
@@ -220,10 +223,12 @@
 .aboutCluster {
   margin: 15px 0 10px;
   width: 100vw;
+  height: 55vh;
 }
 
 .leftFrame {
-  height: 425px;
+  /* height: 425px; */
+  height: 100%;
   rotate: 180deg;
   width: 10vw;
   margin-left: 5vw;
@@ -232,12 +237,12 @@
 .homeAboutPhoto {
   width: 70vw;
   border-radius: 20px;
-  margin-bottom: 20px;
   border: 2px solid var(--cherry);
 }
 
 .rightFrame {
-  height: 425px;
+  /* height: 425px; */
+  height: 100%;
   width: 10vw;
   margin-right: 5vw;
 }
@@ -303,9 +308,40 @@
 }
 
 @media screen and (min-width: 575px) {
+  .bannerPhoto {
+    height: 350px;
+  }
+
+  .lilly {
+    position: relative;
+    left: -10px;
+    bottom: -40px;
+    width: 40vw;
+    height: 300px;
+  }
+
+  .serviceWords {
+    width: 70vw;
+    margin-right: 20px;
+  }
 }
 
 @media screen and (min-width: 768px) {
+  .whatDoula p,
+  .whyDoula p {
+    width: 80vw;
+    margin: auto;
+    margin-bottom: 30px;
+  }
+
+  .bannerPhoto {
+    height: 450px;
+  }
+
+  .serviceWords {
+    width: 60vw;
+    margin-right: 30px;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -320,10 +356,42 @@
   .multiCherrySageSVG {
     background-image: url(../../assets/bigCherrySage.svg);
   }
+
+  .lilly {
+    width: 20vw;
+  }
+
+  .serviceWords {
+    width: 50vw;
+    margin-right: 50px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
+  .whatDoula p,
+  .whyDoula p {
+    width: 60vw;
+  }
+
+  .serviceBanner > div {
+    margin: auto;
+  }
+
+  .serviceWords {
+    width: 50vw;
+    margin-right: 100px;
+  }
 }
 
 @media screen and (min-width: 1400px) {
+  .whatDoula h2,
+  .whyDoula h2 {
+    margin-top: 80px;
+  }
+
+  .whatDoula p,
+  .whyDoula p {
+    width: 50vw;
+    margin-bottom: 60px;
+  }
 }
